tests/rosetta/out/Smalltalk/associative-array-creation.out
/tmp/associative-array-creation.st:5: parse error, expected ']'
