tests/rosetta/out/Smalltalk/associative-array-creation.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| removeKey out key main x y1 ok |
removeKey := [:m :k | out := Dictionary from:{}.
m do: [:key |.
((key ~= k)) ifTrue: [
out at: key put: m at: key.
] .
].
.
out. ].
main := [ x := nil.
x := Dictionary from:{}.
x at: 'foo' put: 3.
y1 := x at: 'bar'.
ok := (x includes: 'bar').
Transcript show: (y1) printString; cr.
Transcript show: (ok) printString; cr.
x := removeKey value: x value: 'foo'.
x := Dictionary from:{'foo'->2. 'bar'->42. 'baz'->-1}.
Transcript show: (x at: 'foo') printString; show: ' '; show: (x at: 'bar') printString; show: ' '; show: (x at: 'baz') printString; cr. ].
main value.
